bug/8: Fixed bug that made the rewritten script fail if class list contains classes from the jar file